--- a/post/templates/index.html
+++ b/post/templates/index.html
@@ -28,6 +28,7 @@
  			<a href="{% url 'l_comment' fpost.id%}"><button>comment</button></a>
  			<a href="{% url 'view_comment' fpost.id %}"><button>view comment</button></a>
  			<a href="{% url 'confirm' fpost.id %}"><button>delete</button></a>
+ 			<a href="{% url 'update' fpost.id%}"><button>update</button></a>
  		</ul>
  		{% endfor %}
  	</nav>
