--- a/post/templates/view_comment.html
+++ b/post/templates/view_comment.html
@@ -1,10 +1,11 @@
 <h3><a href="{% url 'index' %}">Home</a></h3>
-<h1>All Comments</h1>
+<h1>Comments</h1>
 {% for comm in comment %}
 	<ul>
 		<li>
 			<h2>{{ comm.comment }}</h2>
 		</li>
 		<a href="{% url 'delete_c' comm.id%}"><button>delete</button></a>
+		<a href="{% url 'update_c' comm.id %}"><button>update</button></a>
 	</ul>
 {% endfor%}
