made some modifications

--- a/post/templates/confirm.html
+++ b/post/templates/confirm.html
@@ -34,7 +34,7 @@
 <body>
 	<div class="container">
 		<h2>Confirm delete</h2>
-		<p>are u sure u want to delete this</p>
+		<p>are u sure u want to delete this post?</p>
 		<a href="{% url 'delete' post.id%}"><button class="btn">yes</button></a>
 		<a href="{% url 'index'%}"><button class="btn">no</button></a>
 	</div>
