--- a/post/templates/post_comm.html
+++ b/post/templates/post_comm.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+{% extends "base.html" %}
+{% block body %}
     <title>{% block title %} {% endblock %}</title>
     <style>
     	* {
@@ -44,5 +40,5 @@
 	{% block content%}
 	
 	{% endblock %}
-</body
-</html>
+</body>
+{% endblock %}
