--- a/post/templates/auth_base.html
+++ b/post/templates/auth_base.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+{% extends "base.html" %}
+{% block body %}
     <title>{% block title %} {% endblock%}</title>
     <style>
         * {
@@ -75,4 +71,4 @@
 	
 	{% endblock %}
 </body>
-</html>
+{% endblock %}
